--- a/index.html
+++ b/index.html
@@ -1337,7 +1337,7 @@ background: linear-gradient(90deg, rgba(0, 84, 77, 1) 0%,rgba(22, 144, 110, 0.7)
                         <!-- Image -->
                         <div class="w-full h-48 rounded-2xl overflow-hidden mb-6">
                             <img src="./asstes/img/Citizen Account.png" 
-                                alt="حساب المواطن" class="w-full h-full object-cover">
+                                alt="حساب المواطن" class="w-full h-full object-contain">
                         </div>
 
                         <!-- Content -->
@@ -1443,34 +1443,7 @@ background: linear-gradient(90deg, rgba(0, 84, 77, 1) 0%,rgba(22, 144, 110, 0.7)
         <img src="./asstes/img/Asset 16@4x.png" alt="نقشة سدو سعودية" class="w-full h-20 object-cover opacity-10">
     </div>
 
-    <section class="relative bg-white py-20 px-6 lg:px-20 overflow-hidden banner-2"
-        style="background-image: url('./asstes/img/sign.png');">
-        <div class="max-w-6xl mx-auto  items-center">
-            <div class="absolute inset-0 bg-black/50"></div>
-            <!-- النص -->
-            <div class="text-center">
-                <h2 class="text-3xl md:text-4xl font-extrabold text-green-800 mb-6 ">
-                    أهمية إنجاز الخدمات الحكومية بسرعة
-                </h2>
-                <p class="text-lg text-gray-700 leading-relaxed mb-6 ">
-                    في <span class="font-bold text-green-700">منصة آفاق</span> ندرك أن سرعة إنجاز
-                    الخدمات الحكومية ليست مجرد خيار، بل ضرورة لضمان راحة المواطنين
-                    وتسهيل تعاملاتهم اليومية.
-                </p>
-                <p class="text-lg text-gray-700 leading-relaxed mb-8 ">
-                    لذلك نعمل على توفير حلول مبتكرة تضمن الدقة، الكفاءة،
-                    والالتزام بمعايير الجودة لتقديم تجربة سلسة تلبي توقعات العملاء في المملكة العربية السعودية.
-                </p>
-
-                <a href="tel:966500000000"
-                    class="inline-block bg-saudi-green text-white font-bold py-3 px-8 rounded-full shadow-md  transition-all ">
-                    تواصل معنا الآن
-                </a>
-            </div>
-
-
-        </div>
-    </section>
+  
 
 
 
@@ -1698,7 +1671,7 @@ background: linear-gradient(90deg, rgba(0, 84, 77, 1) 0%,rgba(22, 144, 110, 0.7)
                 <!-- Text Content -->
                 <div class="max-w-2xl mb-6 lg:mb-0">
                     <h2 class="text-3xl font-bold text-green-900 mb-4 ">
-                        شركة منصة آفاق للخدمات الحكومية
+                         منصة آفاق للخدمات العامة
                     </h2>
                     <p class="text-gray-700 mb-6  leading-relaxed">
                         تعتبر <span class="font-bold text-green-800">شركة منصة آفاق</span> من الشركات الرائدة في مجال
@@ -1747,15 +1720,11 @@ background: linear-gradient(90deg, rgba(0, 84, 77, 1) 0%,rgba(22, 144, 110, 0.7)
         <div class="partners-hero-header">
             <div class="partners-title-container">
                 <div class="partners-title-backdrop"></div>
-                <h2 class="partners-mega-title">شركاؤنا</h2>
+                <h6 class="partners-mega-title">  خدماتنا مع أهم الجهات 
+                    <br> في المملكة العربية السعودية</h6>
                 
             </div>
-            <div class="partners-subtitle-container">
-                <p class="partners-description">
-                    نقدم  خدماتنا مع أهم الجهات الحكومية في المملكة العربية السعودية
-                </p>
-                <div class="partners-description-line"></div>
-            </div>
+          
         </div>
 
         <div class="partners-slider-wrapper">
