--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 <!-- Image -->
                 <div class="relative group" data-aos="fade-left" data-aos-delay="300">
                     <div class="overflow-hidden rounded-3xl shadow-2xl ">
-                        <img src="./asstes/img/logo1.png" alt="عن الشركة"
+                        <img src="./asstes/img/about.jpg" alt="عن الشركة"
                             class="w-full object-content bg-saudi-green transform transition-transform duration-700 group-hover:scale-105" />
                     </div>
                 </div>
@@ -1085,6 +1085,59 @@
                         </div>
                     </div>
 
+
+                    <!-- Card:13 الضمان الاجتماعي المطور -->
+                    <div class="bg-white rounded-3xl p-8 shadow-lg card-hover relative overflow-hidden">
+
+                        <!-- Image -->
+                        <div class="w-full h-48 rounded-2xl overflow-hidden mb-6">
+                            <img src="./asstes/img/human-resource1.png" alt="الضمان الاجتماعي المطور"
+                                class="w-full h-full object-contain">
+                        </div>
+
+                        <!-- Content -->
+                        <div class="mt-16">
+                            <h3 class="text-2xl font-bold text-gray-800 mb-4">الضمان الاجتماعي المطور</h3>
+
+                            <p class="text-gray-600 mb-4 leading-relaxed">
+                                نقدم لك جميع خدمات الضمان الاجتماعي المطور، لمساعدتك على الحصول على الدعم الحكومي بسهولة وسرعة.
+                            </p>
+
+                            <p class="text-gray-500 text-sm mb-6 leading-relaxed">
+                                فريقنا المختص يقوم بخدمتك في التسجيل، المتابعة، وحل أي مشاكل تتعلق بعدم الأهلية أو الاستحقاق، لضمان حصولك على الدعم المستحق بكل دقة واحترافية.
+                            </p>
+
+                            <!-- Services List -->
+                            <ul class="space-y-3 mb-8">
+                                <li class="bullet-point text-gray-700">التسجيل بالضمان</li>
+                                <li class="bullet-point text-gray-700">تقديم الاعتراضات</li>
+                                <li class="bullet-point text-gray-700">حل مشاكل عدم أهلية الاستحقاق</li>
+                            </ul>
+
+                            <!-- Buttons -->
+                            <div class="flex gap-4">
+                                <!-- Call Button -->
+                                <a href="tel:0508298617">
+                                    <button
+                                        class="bg-saudi-green text-white px-6 py-3 rounded-xl font-semibold hover:shadow-lg transition-all duration-300 flex items-center gap-2">
+                                        <i class="fas fa-phone-alt"></i>
+                                        اتصل بنا
+                                    </button>
+                                </a>
+
+                                <!-- WhatsApp Button -->
+                                <a href="https://wa.me/966555952139" target="_blank">
+                                    <button
+                                        class="custom-gold text-white px-6 py-3 rounded-xl font-semibold hover:shadow-lg transition-all duration-300 flex items-center gap-2">
+                                        <i class="fab fa-whatsapp"></i>
+                                        واتساب
+                                    </button>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+
                  
 
                 </div>
@@ -1645,7 +1698,7 @@
             <div class="text-center mb-16">
                 <h2 class=" mb-4 partners-mega-title">تقييمات عملائنا</h2>
                 <p class="text-xl text-gray-600 max-w-2xl mx-auto">
-                    آراء عملائنا الكرام من خلال تقييماتهم على خرائط جوجل
+                    آراء عملائنا الكرام من خلال تقييماتهم  لنا
                 </p>
                 <div class="w-20 h-1 bg-saudi-green mx-auto mt-6"></div>
             </div>
